syntax = "proto3";
package memory.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

option java_multiple_files = true;
option java_package = "io.github.chirino.memory.grpc.v1";

message PageRequest {
  string page_token = 1;
  int32 page_size = 2;
}

message PageInfo {
  string next_page_token = 1;
}

enum ConversationListMode {
  CONVERSATION_LIST_MODE_UNSPECIFIED = 0;
  ALL = 1;
  ROOTS = 2;
  LATEST_FORK = 3;
}

enum AccessLevel {
  ACCESS_LEVEL_UNSPECIFIED = 0;
  OWNER = 1;
  MANAGER = 2;
  WRITER = 3;
  READER = 4;
}

enum MessageChannel {
  MESSAGE_CHANNEL_UNSPECIFIED = 0;
  HISTORY = 1;
  MEMORY = 2;
  SUMMARY = 3;
}

message ConversationSummary {
  string id = 1;
  string title = 2;
  string owner_user_id = 3;
  string created_at = 4;
  string updated_at = 5;
  string last_message_preview = 6;
  AccessLevel access_level = 7;
}

message Conversation {
  string id = 1;
  string title = 2;
  string owner_user_id = 3;
  string created_at = 4;
  string updated_at = 5;
  string last_message_preview = 6;
  AccessLevel access_level = 7;
  string conversation_group_id = 8;
  string forked_at_message_id = 9;
  string forked_at_conversation_id = 10;
}

message ConversationMembership {
  string conversation_group_id = 1;
  string user_id = 2;
  AccessLevel access_level = 3;
  string created_at = 4;
}

message ConversationForkSummary {
  string conversation_id = 1;
  string conversation_group_id = 2;
  string forked_at_message_id = 3;
  string forked_at_conversation_id = 4;
  string title = 5;
  string created_at = 6;
}

message CreateConversationRequest {
  string title = 1;
  google.protobuf.Struct metadata = 2;
}

message ListConversationsRequest {
  ConversationListMode mode = 1;
  string query = 2;
  PageRequest page = 3;
}

message ListConversationsResponse {
  repeated ConversationSummary conversations = 1;
  PageInfo page_info = 2;
}

message GetConversationRequest {
  string conversation_id = 1;
}

message DeleteConversationRequest {
  string conversation_id = 1;
}

message ForkConversationRequest {
  string conversation_id = 1;
  string message_id = 2;
  string title = 3;
}

message ListForksRequest {
  string conversation_id = 1;
}

message ListForksResponse {
  repeated ConversationForkSummary forks = 1;
}

message TransferOwnershipRequest {
  string conversation_id = 1;
  string new_owner_user_id = 2;
}

message CreateMessageRequest {
  string user_id = 1;
  MessageChannel channel = 2;
  int64 memory_epoch = 3;
  repeated google.protobuf.Value content = 4;
}

message AppendMessageRequest {
  string conversation_id = 1;
  CreateMessageRequest message = 2;
}

message ListMessagesRequest {
  string conversation_id = 1;
  MessageChannel channel = 2;
  PageRequest page = 3;
}

message ListMessagesResponse {
  repeated Message messages = 1;
  PageInfo page_info = 2;
}

message Message {
  string id = 1;
  string conversation_id = 2;
  string user_id = 3;
  MessageChannel channel = 4;
  int64 memory_epoch = 5;
  repeated google.protobuf.Value content = 6;
  string created_at = 7;
}

message ListMembershipsRequest {
  string conversation_id = 1;
}

message ListMembershipsResponse {
  repeated ConversationMembership memberships = 1;
}

message ShareConversationRequest {
  string conversation_id = 1;
  string user_id = 2;
  AccessLevel access_level = 3;
}

message UpdateMembershipRequest {
  string conversation_id = 1;
  string member_user_id = 2;
  AccessLevel access_level = 3;
}

message DeleteMembershipRequest {
  string conversation_id = 1;
  string member_user_id = 2;
}

message SearchMessagesRequest {
  string query = 1;
  int32 top_k = 2;
  repeated string conversation_ids = 3;
  string before = 4;
}

message SearchMessagesResponse {
  repeated SearchResult results = 1;
}

message SearchResult {
  Message message = 1;
  float score = 2;
  string highlights = 3;
}

message CreateSummaryRequest {
  string conversation_id = 1;
  string title = 2;
  string summary = 3;
  string until_message_id = 4;
  string summarized_at = 5;
}

message HealthResponse {
  string status = 1;
}

service SystemService {
  rpc GetHealth(google.protobuf.Empty) returns (HealthResponse);
}

service ConversationsService {
  rpc ListConversations(ListConversationsRequest) returns (ListConversationsResponse);
  rpc CreateConversation(CreateConversationRequest) returns (Conversation);
  rpc GetConversation(GetConversationRequest) returns (Conversation);
  rpc DeleteConversation(DeleteConversationRequest) returns (google.protobuf.Empty);
  rpc ForkConversation(ForkConversationRequest) returns (Conversation);
  rpc ListForks(ListForksRequest) returns (ListForksResponse);
  rpc TransferOwnership(TransferOwnershipRequest) returns (google.protobuf.Empty);
}

service ConversationMembershipsService {
  rpc ListMemberships(ListMembershipsRequest) returns (ListMembershipsResponse);
  rpc ShareConversation(ShareConversationRequest) returns (ConversationMembership);
  rpc UpdateMembership(UpdateMembershipRequest) returns (ConversationMembership);
  rpc DeleteMembership(DeleteMembershipRequest) returns (google.protobuf.Empty);
}

service MessagesService {
  rpc ListMessages(ListMessagesRequest) returns (ListMessagesResponse);
  rpc AppendMessage(AppendMessageRequest) returns (Message);
}

service SearchService {
  rpc SearchMessages(SearchMessagesRequest) returns (SearchMessagesResponse);
  rpc CreateSummary(CreateSummaryRequest) returns (Message);
}

service ResponseResumerService {
  // Stream response tokens for a conversation
  rpc StreamResponseTokens(stream StreamResponseTokenRequest) returns (StreamResponseTokenResponse);
  
  // Replay cached response tokens from a resume position
  rpc ReplayResponseTokens(ReplayResponseTokensRequest) returns (stream ReplayResponseTokensResponse);
  
  // Check if response resumer is enabled
  rpc IsEnabled(google.protobuf.Empty) returns (IsEnabledResponse);
  
  // Check if a conversation has a response in progress
  rpc HasResponseInProgress(HasResponseInProgressRequest) returns (HasResponseInProgressResponse);
  
  // Check which conversations have responses in progress
  rpc CheckConversations(CheckConversationsRequest) returns (CheckConversationsResponse);
}

message StreamResponseTokenRequest {
  string conversation_id = 1;  // Only in first message
  string token = 2;            // Token content
  bool complete = 3;           // Set to true in final message
}

message StreamResponseTokenResponse {
  bool success = 1;
  string error_message = 2;    // Only set if success=false
  int64 current_offset = 3;    // Current cumulative byte offset
}

message ReplayResponseTokensRequest {
  string conversation_id = 1;
  int64 resume_position = 2;    // Byte offset to resume from
}

message ReplayResponseTokensResponse {
  string token = 1;
  int64 offset = 2;            // Cumulative byte offset after this token
}

message IsEnabledResponse {
  bool enabled = 1;
}

message HasResponseInProgressRequest {
  string conversation_id = 1;
}

message HasResponseInProgressResponse {
  bool in_progress = 1;
}

message CheckConversationsRequest {
  repeated string conversation_ids = 1;
}

message CheckConversationsResponse {
  repeated string conversation_ids = 1;  // Only IDs with responses in progress
}
